fix css on mobile

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -60,4 +60,7 @@
     margin-right: 0;
     margin-bottom: 30px;
   }
+  .button {
+    align-self: flex-end;
+  }
 }
